# hello-rust

./: Cargo.toml  main
module1/: Cargo.toml
module1/src/: main.rs
module2/: Cargo.toml
module2/src/: lib.rs
src/: advanced_fun.rs  advanced_types.rs  base_syntax.rs  closure.rs  concurrent_parallel.rs  control_syntax.rs  enum_syntax.rs  fn_syntax.rs  guess_num.rs  hashmap_syntax.rs  iter_syntax.rs  lib.rs  life_cycle.rs  main.rs  oop.rs  owner_ship.rs  package_syntax.rs  panic_syntax.rs  patterns_matching.rs  point_syntax.rs  string_syntax.rs  struct_syntax.rs  test.rs  trait_syntax.rs  type_syntax.rs  unsafe_syntax.rs  use_syntax.rs  vector_syntax.rs
src/package_syntax/: struct_pub.rs
tests/: a_test_1.rs  a_test_2.rs
tests/common/: mod.rs
