[workspace]
members = [
  "module1",
  "module2"
]

[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev] 
# 编译优化程度
opt-level = 1

[profile.release]
opt-level = 3

# from https://crates.io
[dependencies]
ferris-says = "0.2"
rand = "0.7.3"